--- a/django/portal/portalapp/templates/sobre.html
+++ b/django/portal/portalapp/templates/sobre.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p></p>
+    <h1>Seminário SGDB - IRIS InterSystems</h1>
+    <p>Grupo 1</p>
+    <p>Integrantes</p>
+    <ul>
+        <li>Renato(backend)(frontend)</li>
+        <li>Felipe (backend)(frontend)</li>
+        <li>Igor (frontend)</li>
+        <li>Higor</li>
+        <li>Nathan</li>
+    </ul>
 </body>
 </html>
