--- a/django/portal/portalapp/templates/home.html
+++ b/django/portal/portalapp/templates/home.html
@@ -8,15 +8,22 @@
 </head>
 <body>
     <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Professores</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Alunos</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Disciplinas</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Sobre</a>
+        <a class="flex-sm-fill text-sm-center nav-link">Sobre</a>
       </nav>
       <div class="container">
-        <p>Bem vindo!</p>
       </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Aluno</th>
+            <th scope="col">Materia</th>
+            <th scope="col">Professor</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
