--- a/django/portal/portalapp/templates/home.html
+++ b/django/portal/portalapp/templates/home.html
@@ -21,7 +21,15 @@
           </tr>
         </thead>
         <tbody>
-
+            {% block tabela %}
+            {% for item in items %}
+                <tr>
+                    <td>{{item.aluno}}</td>
+                    <td>{{item.materia}}</td>
+                    <td>{{item.professor}}</td>
+                </tr>              
+            {% endfor %}  
+            {% endblock %}
         </tbody>
       </table>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
