--- a/django/portal/portalapp/templates/login.html
+++ b/django/portal/portalapp/templates/login.html
@@ -46,7 +46,7 @@
         <h1>Login</h1>
         <input type="text" placeholder="Usuário">
         <br><br>
-        <button>Enviar</button>
+        <button action="{% url 'todosDadosAPI' %}">Enviar</button>
     </div>
 </body>
 </html>
